--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>SVG Fundamentals</h1>
-<svg width="900" height="500">
-  <circle cx="250" cy="150" r="125"></circle>
+<svg width="1000" height="1000">
+  <circle cx="250" cy="150" r="125" fill="blue"></circle>
   <circle cx="500" cy="150" r="125" fill="red"></circle>
+  <circle cx="750" cy="150" r="125" fill="green"></circle>
+  <rect x="1" y="1" width="900" height="400" fill="none" stroke="blue" stroke-width="2" />
+  <rect x="0" y="300" width="100" height="100" fill="red" stroke="none" />
+
 </svg>
